# Aletheia-Core-1

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  pull_request_template.md  settings.yml
.github/workflows/: ci.yml  reuse-tests.yml  tests.yml
_tests_backup_original/: test_api.py  test_brain_core.py  test_configuration.py
data/examples/commands/: sydity.wav.txt
data/synthetic/: commands_manifest.csv  generate_synthetic.py
docs/: API.md  ARCHITECTURE.md  ETHICS.md  OVERVIEW.md  REPOSITORY.md  ROADMAP.md
tests/: conftest.py  test_api.py  test_api_act.py  test_behavior_internals.py  test_behavior_policy.py  test_brain_core.py  test_config_merge.py  test_configuration.py  test_engines.py  test_ethics_bark.py  test_ethics_guard.py  test_gpio_fallback.py  test_hardware.py  test_robodog_brain.py  test_sim_interact.py  test_simulation.py  test_tts_factory.py  test_utils_and_brain.py
tests/unit/: test_smoke.py
vct/: __init__.py  cli.py  config.yaml  configuration.py
vct/api/: app.py
vct/behavior/: policy.py
vct/engines/: stt.py  tts.py
vct/ethics/: guard.py
vct/hardware/: gpio_reward.py
vct/robodog/: dog_bot_brain.py
vct/simulation/: dog_env.py
vct/utils/: logging.py
