[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vct"
version = "0.14.0"
description = "Voice Canine Trainer + RoboDog Brain (LLM-first control, reward GPIO, ethics guard)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ярослав / DexterX"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.2",
  "pyttsx3>=2.90",
  "gTTS>=2.5.1",
  "playsound>=1.3.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.2",
  "paho-mqtt>=2.1.0",
  "prometheus-client>=0.20.0",
  "openai-whisper>=20231117"
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E","F","I","UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=vct --cov-report=xml"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
branch = true
source = ["vct"]

[tool.coverage.report]
fail_under = 80
show_missing = true


[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.2",
  "flake8>=7.0.0"
]
